--- a/asf_theme/mkdocs_theme.yml
+++ b/asf_theme/mkdocs_theme.yml
@@ -7,3 +7,6 @@ favicon: assets/images/favicon.ico
 
 # ASF's Logo
 logo: assets/images/ASFLogo-Blue2.png
+
+extra_css:
+  - assets/stylesheets/overries.css
