--- a/.github/workflows/tag-and-distribute.yml
+++ b/.github/workflows/tag-and-distribute.yml
@@ -96,4 +96,4 @@ jobs:
       - name: Pip install ${{ needs.package.outputs.SDIST_VERSION }}
         shell: bash -l {0}
         run: |
-          python -m pip install hyp3_sdk==${{ needs.package.outputs.SDIST_VERSION }}
+          python -m pip install mkdocs-asf-theme==${{ needs.package.outputs.SDIST_VERSION }}
