--- a/asf_theme/mkdocs_theme.yml
+++ b/asf_theme/mkdocs_theme.yml
@@ -7,3 +7,12 @@ favicon: assets/images/favicon.ico
 
 # ASF's Logo
 logo: assets/images/ASFLogo-Blue2.png
+
+# ASF's social links
+social:
+  - icon: fontawesome/brands/facebook-f
+    link: https://www.facebook.com/AKSatellite
+  - icon: fontawesome/brands/twitter
+    link: https://twitter.com/Ak_Satellite
+  - icon: fontawesome/brands/youtube
+    link: https://www.youtube.com/channel/UChCfI0oVWw4qDwEidnDskJQ
