--- a/asf_theme/mkdocs_theme.yml
+++ b/asf_theme/mkdocs_theme.yml
@@ -11,6 +11,7 @@ favicon: assets/images/favicon.ico
 
 # ASF's Logo
 asf_logo: assets/images/ASFLogo-Blue2.png
+asf_logo_url: https://asf.alaska.edu/
 
 # ASF's social links
 social:
