update repository name to mkdocs-asf-theme

--- a/.github/workflows/tag-and-distribute.yml
+++ b/.github/workflows/tag-and-distribute.yml
@@ -25,7 +25,7 @@ jobs:
           query: .github/queries/asssociated-pr.query.yml
           outputFile: pr.json
           owner: ASFHyP3
-          name: asf-mkdocs-theme
+          name: mkdocs-asf-theme
           sha: ${{ github.sha }}
 
       - name: Get PR labels
@@ -36,7 +36,7 @@ jobs:
           query: .github/queries/pr-labels.query.yml
           outputFile: labels.json
           owner: ASFHyP3
-          name: asf-mkdocs-theme
+          name: mkdocs-asf-theme
 
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v2
