--- a/.github/workflows/tag-and-distribute.yml
+++ b/.github/workflows/tag-and-distribute.yml
@@ -90,6 +90,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: package
     steps:
+      - uses: actions/checkout@v2
       - uses: actions/setup-python@v1
         with:
           python-version: 3.8
