--- a/asf_theme/mkdocs_theme.yml
+++ b/asf_theme/mkdocs_theme.yml
@@ -16,14 +16,16 @@ asf_logo_url: https://asf.alaska.edu/
 # ASF's copyright text
 copyright: Alaska Satellite Facility
 
+# TODO: get these to display on hyp3-docs
 # ASF's social links
-social:
-  - icon: fontawesome/brands/facebook-f
-    link: https://www.facebook.com/AKSatellite
-  - icon: fontawesome/brands/twitter
-    link: https://twitter.com/Ak_Satellite
-  - icon: fontawesome/brands/youtube
-    link: https://www.youtube.com/channel/UChCfI0oVWw4qDwEidnDskJQ
+extra:
+  social:
+    - icon: fontawesome/brands/facebook-f
+      link: https://www.facebook.com/AKSatellite
+    - icon: fontawesome/brands/twitter
+      link: https://twitter.com/Ak_Satellite
+    - icon: fontawesome/brands/youtube
+      link: https://www.youtube.com/channel/UChCfI0oVWw4qDwEidnDskJQ
 
 # ASF's Google Analytics
 google_analytics:
