--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,44 +1,17 @@
-name: Write release and finish
+name: Create Release
 
 on:
   push:
     tags:
-      - v*
-
+      - 'v*'
 
 jobs:
-  finish:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-          token: ${{ secrets.TOOLS_BOT_PAK }}
-
-      - name: Create Release
-        uses: docker://antonyurchenko/git-release:latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOOLS_BOT_PAK }}
-          ALLOW_TAG_PREFIX: "true"
-          RELEASE_NAME_PREFIX: "ASF MkDocs Theme "
-
-      - name: Attempt fast-forward develop from main
-        run: |
-          git fetch --prune
-          git checkout develop && git pull --ff-only
-          git merge --ff-only origin/main
-          git push
-
-      - name: Open PR to bring main back to develop
-        if: ${{ failure() }}
-        uses: repo-sync/pull-request@v2
-        with:
-          source_branch: main
-          destination_branch: develop
-          pr_title: Pulling ${{ github.ref }} into default
-          pr_body: Fast-forward of main to default failed!
-          pr_assignee: ${{ github.actor }}
-          pr_label: tools-bot
-          pr_draft: false
-          pr_allow_empty: true
-          github_token: ${{ secrets.TOOLS_BOT_PAK }}
+  call-release-workflow:
+    uses: ASFHyP3/actions/.github/workflows/reusable-release.yml@v0.8.2
+    with:
+      release_prefix: HyP3-CI
+      release_branch: main      # Optional; default shown
+      develop_branch: develop   # Optional; default shown
+      sync_pr_label: tools-bot  # Optional; default shown
+    secrets:
+      USER_TOKEN: ${{ secrets.TOOLS_BOT_PAK }}
