--- a/.github/workflows/distribute.yml
+++ b/.github/workflows/distribute.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   call-version-info-workflow:
     uses: ASFHyP3/actions/.github/workflows/reusable-version-info.yml@v0.11.1
+    with:
+      python_version: "3.10"
 
   distribute:
     runs-on: ubuntu-latest
